--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
-"dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+{
+  "name": "nonton-drama",
+  "version": "1.0.0",
+  "dependencies": {
     "axios": "^1.6.0"
   }
+}
